@@ -61,7 +61,7 @@ my %json_validation = (
 sub isEnabled {
     my ($self) = @_;
 
-    if (!$self->{target}->isa('FusionInventory::Agent::Target::Server')) {
+    if (!$self->{target}->isType('server')) {
         $self->{logger}->debug("Collect task not compatible with local target");
         return;
     }
