@@ -21,7 +21,7 @@ our $VERSION = FusionInventory::Agent::Task::Deploy::Version::VERSION;
 sub isEnabled {
     my ($self) = @_;
 
-    if (!$self->{target}->isa('FusionInventory::Agent::Target::Server')) {
+    if (!$self->{target}->isType('server')) {
         $self->{logger}->debug("Deploy task not compatible with local target");
         return;
     }
